update MeGene System

--- a/MeetSelf/MeGene/MeGeneSports.html
+++ b/MeetSelf/MeGene/MeGeneSports.html
@@ -191,7 +191,7 @@ $(document).ready(function () {
 
 <h1 class="title toc-ignore">MeGeneReport</h1>
 <h4 class="author">yujia</h4>
-<h4 class="date">2019年6月3日</h4>
+<h4 class="date">2019.06.06</h4>
 
 </div>
 
@@ -212,7 +212,7 @@ $(document).ready(function () {
 </ul>
 <hr />
 <div class="section level2">
-<h2><font color="#00ffff"><strong>1.爆发力检测</strong></font></h2>
+<h2><font color="#00ffff"><strong>1.耐力检测</strong></font></h2>
 <p>耐力是指身体进行长时间紧张体力活动的耐久能力，是一种重要的运动能力。在马拉松、滑雪等长时间中强度的耐力项目中，耐力尤为关键。除了后天的训练和营养之外，基因在耐力表现中也扮演重要角色。</p>
 <div class="section level3">
 <h3><strong>我的基因检测结果</strong></h3>
@@ -220,25 +220,27 @@ $(document).ready(function () {
 </div>
 <div class="section level3">
 <h3><strong>建议</strong></h3>
-<pre><code>## [1] &quot;NA&quot;</code></pre>
+<p>NA</p>
 </div>
 <div class="section level3">
 <h3><strong>相关知识</strong></h3>
-<pre><code>## [1] &quot;NA&quot;</code></pre>
+<p>NA</p>
 </div>
 <div class="section level3">
 <h3><strong>检测的基因</strong></h3>
-<pre><code>## [1] &quot;NA&quot;</code></pre>
+<pre><code>## [1] &quot;增加身体体质 长期进行有氧运动的人能增加血红蛋白的数量，提高个人的抵抗能力，延缓衰老，预防动脉硬化，降低心脑血管疾病爆发的几率。增强心肺功能 有氧运动除了塑造体形，还能增加个人体质，帮助增强个人心肺功能，因为肌肉的收缩需要大量的氧气，心脏的收缩次数便会随之增加，每次输入的血液也会随之增加，呼吸次数也增加，肺部收缩的次数也增加，扩张的程度也变大，所以增加了两者耐力，加强了锻炼。&quot;</code></pre>
 </div>
 <div id="rs" class="section level3">
 <h3><strong>rs位点</strong></h3>
-<pre><code>## [1] &quot;NA&quot;</code></pre>
+<p>增加身体体质 长期进行有氧运动的人能增加血红蛋白的数量，提高个人的抵抗能力，延缓衰老，预防动脉硬化，降低心脑血管疾病爆发的几率。增强心肺功能 有氧运动除了塑造体形，还能增加个人体质，帮助增强个人心肺功能，因为肌肉的收缩需要大量的氧气，心脏的收缩次数便会随之增加，每次输入的血液也会随之增加，呼吸次数也增加，肺部收缩的次数也增加，扩张的程度也变大，所以增加了两者耐力，加强了锻炼。</p>
 </div>
 <div class="section level3">
 <h3><strong>参考文献</strong></h3>
-<pre><code>## [1] &quot;NA&quot;</code></pre>
-<hr />
+<p>NA</p>
 </div>
+</div>
+<div class="section level2">
+<h2>爆发力检测</h2>
 </div>
 </div>
 
